backend/errors.txt
    Checking tokensbyte-server v0.1.0 (/Volumes/D/webwwwai/tokensbyte/backend)
error[E0432]: unresolved imports `crate::middleware::auth::admin_auth_middleware`, `crate::middleware::auth::require_permission`
  --> src/api/announcements.rs:13:24
   |
13 |     middleware::auth::{admin_auth_middleware, require_permission},
   |                        ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^ no `require_permission` in `auth`
   |                        |
   |                        no `admin_auth_middleware` in `auth`

error[E0603]: module import `auth` is private
  --> src/api/announcements.rs:13:17
   |
13 |     middleware::auth::{admin_auth_middleware, require_permission},
   |                 ^^^^ private module import
   |
help: consider importing this module instead:
      crate::auth
  --> src/api/announcements.rs:13:21
   |
13 |     middleware::auth::{admin_auth_middleware, require_permission},
   |                     ^^^
note: the module import `auth` is defined here...
  --> src/middleware/mod.rs:12:5
   |
12 | use crate::auth;
   |     ^^^^^^^^^^^
note: ...and refers to the module `auth` which is defined here
  --> src/main.rs:4:1
   |
 4 | mod auth;
   | ^^^^^^^^^

error[E0603]: module import `auth` is private
  --> src/api/announcements.rs:13:17
   |
13 |     middleware::auth::{admin_auth_middleware, require_permission},
   |                 ^^^^ private module import
   |
help: consider importing this module instead:
      crate::auth
  --> src/api/announcements.rs:13:21
   |
13 |     middleware::auth::{admin_auth_middleware, require_permission},
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: the module import `auth` is defined here...
  --> src/middleware/mod.rs:12:5
   |
12 | use crate::auth;
   |     ^^^^^^^^^^^
note: ...and refers to the module `auth` which is defined here
  --> src/main.rs:4:1
   |
 4 | mod auth;
   | ^^^^^^^^^

warning: unused imports: `Router`, `delete`, `get`, `post`, and `put`
 --> src/api/announcements.rs:3:15
  |
3 |     routing::{get, post, put, delete},
  |               ^^^  ^^^^  ^^^  ^^^^^^
4 |     Json, Router,
  |           ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0432, E0603.
For more information about an error, try `rustc --explain E0432`.
warning: `tokensbyte-server` (bin "tokensbyte-server") generated 1 warning
error: could not compile `tokensbyte-server` (bin "tokensbyte-server") due to 3 previous errors; 1 warning emitted
